// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de Snapshot en <CounterApp /> Debe hacer match con el snapshot 1`] = `
<div>
  <h1>
    CounterApp
  </h1>
  <h2>
    10
  </h2>
  <button>
     +1 
  </button>
  <button>
     -1 
  </button>
  <button
    aria-label="btn-reset"
  >
     Reset 
  </button>
</div>
`;

exports[`Pruebas de Snapshot en <CounterApp /> Debe hacer match con el snapshot con valor sin definir 1`] = `
<div>
  <h1>
    CounterApp
  </h1>
  <h2>
    No se envio/definio el value
  </h2>
  <button>
     +1 
  </button>
  <button>
     -1 
  </button>
  <button
    aria-label="btn-reset"
  >
     Reset 
  </button>
</div>
`;

exports[`Pruebas de Snapshot en <CounterApp /> Debe hacer match con el snapshot después de hacer clic en +1 1`] = `
<div>
  <h1>
    CounterApp
  </h1>
  <h2>
    11
  </h2>
  <button>
     +1 
  </button>
  <button>
     -1 
  </button>
  <button
    aria-label="btn-reset"
  >
     Reset 
  </button>
</div>
`;

exports[`Pruebas de Snapshot en <CounterApp /> Debe hacer match con el snapshot después de hacer clic en -1 1`] = `
<div>
  <h1>
    CounterApp
  </h1>
  <h2>
    9
  </h2>
  <button>
     +1 
  </button>
  <button>
     -1 
  </button>
  <button
    aria-label="btn-reset"
  >
     Reset 
  </button>
</div>
`;

exports[`Pruebas de Snapshot en <CounterApp /> Debe hacer match con el snapshot después de hacer clic en Reset 1`] = `
<div>
  <h1>
    CounterApp
  </h1>
  <h2>
    10
  </h2>
  <button>
     +1 
  </button>
  <button>
     -1 
  </button>
  <button
    aria-label="btn-reset"
  >
     Reset 
  </button>
</div>
`;

exports[`Pruebas de Snapshot en <CounterApp /> Debe hacer match con el snapshot después de múltiples interacciones 1`] = `
<div>
  <h1>
    CounterApp
  </h1>
  <h2>
    10
  </h2>
  <button>
     +1 
  </button>
  <button>
     -1 
  </button>
  <button
    aria-label="btn-reset"
  >
     Reset 
  </button>
</div>
`;
